feat: model creation

--- a/pm25_forecasting.ipynb
+++ b/pm25_forecasting.ipynb
@@ -9,15 +9,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/valeriagonzalez/Documents/aqi/env/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "/Users/valeriagonzalez/Documents/aqi/env/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import optuna # Hyperparameter optimization\n",
     "import tensorflow as tf\n",
     "\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense, Dropout\n",
+    "from tensorflow.keras.layers import LSTM\n",
     "from tensorflow.keras.regularizers import l1, l2\n",
     "from tensorflow.keras.optimizers import Adam\n",
     "\n",
@@ -55,36 +76,24 @@
     "    model = Sequential()\n",
     "\n",
     "    # Hyperparameter selection\n",
-    "    neurons = trial.suggest_categorical(\"neurons\", [8, 12, 16, 24, 32, 40])\n",
-    "    neurons2 = trial.suggest_categorical(\"neurons2\", [8, 12, 16, 24, 32, 40])\n",
+    "    neurons = trial.suggest_categorical(\"neurons\", [5, 50])\n",
     "    dropout_rate = trial.suggest_float(\"dropout\", 0.1, 0.2, log=True)\n",
-    "    # reg_type = trial.suggest_categorical(\"reg_type\", [None])\n",
-    "    # reg_strength = trial.suggest_float(\"reg_strength\", 1e-3, 1e-1, log=True)\n",
+    "    \n",
+    "    model.add(LSTM(neurons, \n",
+    "                   input_shape=(self.X_train.shape[1], self.X_train.shape[2]),\n",
+    "                   activation=\"relu\"))\n",
     "\n",
-    "    # Choose regularization\n",
-    "    #if reg_type == \"l1\":\n",
-    "     # reg = l1(reg_strength)\n",
-    "    #elif reg_type == \"l2\":\n",
-    "     # reg = l2(reg_strength)\n",
-    "    #else:\n",
-    "     # reg = None\n",
-    "\n",
-    "    # Hidden layer\n",
-    "    model.add(Dense(\n",
-    "        neurons,\n",
-    "        activation=\"relu\",\n",
-    "        input_dim=self.input_dim\n",
-    "        ))\n",
     "\n",
     "    # Dropout layer\n",
-    "    model.add(Dropout(dropout_rate))\n",
+    "    # model.add(Dropout(dropout_rate))\n",
     "\n",
     "    # Output layer\n",
     "    model.add(Dense(1))\n",
     "\n",
     "    # Compile model\n",
-    "    learning_rate = trial.suggest_float(\"learning_rate\", 1e-3, 1e-1, log=True)\n",
-    "    model.compile(optimizer=Adam(learning_rate), loss=\"mse\")\n",
+    "    # learning_rate = trial.suggest_cat(\"learning_rate\", 0.001, 0., log=True)\n",
+    "    learning_rate = 0.001\n",
+    "    model.compile(optimizer=Adam(learning_rate), loss=\"mae\")\n",
     "\n",
     "    return model\n",
     "\n",
@@ -93,10 +102,11 @@
     "    epochs = trial.suggest_categorical(\"epochs\", [50, 100])\n",
     "\n",
     "    # Train the model\n",
-    "    model.fit(\n",
+    "    history = model.fit(\n",
     "        self.X_train,\n",
     "        self.y_train,\n",
     "        epochs=epochs,\n",
+    "        batch_size=72,\n",
     "        validation_data=(self.X_val, self.y_val),\n",
     "        verbose=0\n",
     "        )\n",
@@ -137,7 +147,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   }
  },
