refactor: data preprocessing

--- a/data_preprocess.ipynb
+++ b/data_preprocess.ipynb
@@ -4,22 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Preprocessing\n"
+    "# 1. Data Preprocessing\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before using interpolation methods and outlier removal on the data, certain changes will be applied in order to only get the relevant data and give it a certain format. Some of these changes will be particular to the handling of time series data. \n",
+    "The data used during this project has been obtained from a historical database of hourly sensor readings in Tlaquepaque, and although it's very useful information, it has some inconsistencies. The main problem this database has is incomplete data and a lack of standard practices in creating the datasets (various NULL representatives, missing features, etc.).\n",
+    "\n",
+    "Before performing any forecasting operations on the data, it will be preprocessed. Some of the changes made will be particular to the handling of time series data. \n",
     "\n",
     "These changes will mostly be comprised of: \n",
-    "- Editing column names \n",
-    "- Eliminating irrelevant features to the project\n",
-    "- Accurately replacing null values\n",
-    "- Determining feature data types\n",
-    "- Extracting relevant instances \n",
-    "- Reducing number of instances\n"
+    "\n",
+    "- Standarizing column names.\n",
+    "- Extract relevant features.\n",
+    "- Identify null values.\n",
+    "- Determining feature data types.\n",
+    "- Reducing number of instances.\n",
+    "- Reframing the dataset to have a time series format."
    ]
   },
   {
@@ -36,18 +39,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Edit column names and eliminate innecessary features"
+    "## Standarize column names and extract relevant features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Various yearly datasets will be used for this project. After conducting an analysis of data from years between 2008 and 2023, three have been specifically chosen because of the integrity of their data and the features they have. \n",
-    "\n",
-    "The datasets for the years of 2017, 2020 and 2023 have proven to be the less contaminated datasets and share the following features: \n",
-    "\n",
-    "*Station (Estación), Fecha (Date), Hora (Hour), O3 (Ozone), NO (Nitrogen Oxide), NO2 (Nitrogen Dioxide), NOX (Nitrogen Oxides), CO (Carbon Monoxide), PM2.5 (Fine Particulate Matter less than 2.5 micrometers), PM10 (Fine Particulate Matter less than 10 micrometers), TMP (Temperature), TMPI (Internal Temperature), RH (Relative Humidity), PBA (Barometric Pressure), WS (Wind Speed), WD (Wind Direction), PP (Precipitation), Solar Radiation (RS), and UVI (UV Index).*\n",
+    "After conducting an analysis of data from years between 2008 and 2023, the yearly readings of 2017, 2020 and 2023 have been specifically chosen because of the integrity of their data.\n",
     "\n"
    ]
   },
@@ -55,7 +54,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Not all of these features are necessary for the model so they will be dropped."
+    "### Description of relevant features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Forecasting the PM2.5 readings for Tlaquepaque requires the following features:\n",
+    "\n",
+    "- Date (Fecha)\n",
+    "- Hour (Hora)\n",
+    "- Station (Estación)\n",
+    "- Temperature (TMP)\n",
+    "- Relative Humidity (RH)\n",
+    "- Barometric Pressure (PBA)\n",
+    "- Wind Speed (WS)\n",
+    "- Wind Direction (WD)\n",
+    "- Precipitation (PP)\n",
+    "- Fine Particulate Matter less than 2.5 micrometers (PM2.5)\n",
+    "\n",
+    "In case future forecasting is performed for other pollutants, the following features will be cleaned but not used in the later phases:\n",
+    "\n",
+    "_O3 (Ozone), NO (Nitrogen Oxide), NO2 (Nitrogen Dioxide), NOX (Nitrogen Oxides), CO (Carbon Monoxide), PM10 (Fine Particulate Matter less than 10 micrometers)_\n",
+    "\n",
+    "All other features can be ignored, such as: \n",
+    "\n",
+    "_TMPI (Internal Temperature), Solar Radiation (RS), and UVI (UV Index)._"
    ]
   },
   {
@@ -64,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# read the csv file\n",
+    "# Read the csv file\n",
     "filename = \"semadet-aire-2023\"\n",
     "filepath = f\"datasets/{filename}.csv\"\n",
     "\n",
@@ -214,14 +239,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Replace null values"
+    "## Identify null values"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The data for each year have a variety of identifiers for inexistent data. All the identifiers for the null values will be replaced with NaN (Pandas' representation of null values) to see which columns to keep based on amount of values."
+    "There is a variety of values used to identify for null data. All the identifiers for the null values will be standarized to see which columns to keep based on amount of values."
    ]
   },
   {
@@ -234,9 +259,11 @@
     "    # Null value identifiers\n",
     "    null_values = [\"IO\", \"SE\", \"ND\", \"IF\", \"VE\", \"IR\", \"VZ\", \"IC\", \"IR 1000\",\n",
     "                   \"IR valor 1000\", \" \", \"\", \"-\", \"SD\"]\n",
+    "    \n",
     "    # Columns that don't have null values\n",
     "    exclude_columns = [\"estacion\", \"date\", \"hora\"]\n",
-    "    # Replace all the null values by feature (column)\n",
+    "    \n",
+    "    # Replace null values by feature (column)\n",
     "    for column in row.index:\n",
     "        if column not in exclude_columns and row[column] in null_values:\n",
     "            row[column] = np.nan\n",
@@ -306,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop irrelevant columns\n",
+    "# Drop unuseful columns\n",
     "df.drop([\"no2\", \"so2\"], axis=\"columns\", inplace=True)"
    ]
   },
@@ -332,6 +359,7 @@
    "source": [
     "# Columns that should be treated as floats\n",
     "float_cols = [\"o3\", \"co\", \"pm10\", \"pm25\", \"tmp\", \"rh\", \"ws\", \"wd\", \"pp\"]\n",
+    "\n",
     "# Cast columns to floats\n",
     "df[float_cols] = df[float_cols].astype('float')"
    ]
@@ -347,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The PM2.5 daily forecasting will only be done for the Tlaquepaque region, so all the instances that belong to this region will be extracted and the column \"Estacion\" will no longer be necessary. "
+    "The yearly dataset provides hourly readings for many regions in Guadalajara. As this project only aims to forecast PM2.5 for Tlaquepaque, all the instances that belong to this region will be extracted, making the feature Station (Estacion) no longer useful. "
    ]
   },
   {
@@ -366,8 +394,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop irrelevant column\n",
+    "# Drop unuseful column\n",
     "df.drop(\"estacion\", axis=\"columns\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Reframe dataset as timeseries"
    ]
   },
   {
@@ -417,9 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, the objective of this project is to forecast the daily PM2.5 value. Only one entry for each day will be preserved for each day, to achieve this, the average of all the instances that belong to the same day (usually one for each hour of the day) will be kept as the daily measurement of each feature.\n",
+    "The objective of this project is to forecast the daily PM2.5 readings for Tlaquepaque. Only one entry per day will be preserved by calculating the average of all the readings that belong to the same day.\n",
     "\n",
-    "In the special case of Wind Direction, the fact that the measurement are taken in degrees will be taken into account by calculating the cirular mean of all the instances."
+    "In the special case of Wind Direction, the fact that the measurement is taken in degrees will be taken into account by calculating the cirular mean."
    ]
   },
   {
@@ -442,8 +477,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify average as the function every feature\n",
+    "# Specify average as the aggregating function every feature except wind direction and hour\n",
     "aggregation_functions = {col: \"mean\" for col in df.columns if col not in [\"wd\", \"hora\"]}\n",
+    "\n",
     "# Specify circular mean for Wind Direction\n",
     "aggregation_functions[\"wd\"] = circular_mean"
    ]
@@ -506,7 +542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Drop irrelevant columns\n",
+    "# Drop unuseful columns\n",
     "df_daily.drop([\"pba\", \"co\"], axis=\"columns\", inplace=True)"
    ]
   },
@@ -521,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the data has been properly processed, it'll be saved. This process has been repeated for each yearly dataset."
+    "Once the data has been properly processed, it'll be saved as its own file. This process has been repeated for each yearly dataset that's been found useful."
    ]
   },
   {
