--- a/1_data_preprocess.ipynb
+++ b/1_data_preprocess.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,13 +107,14 @@
     "          axis=\"columns\",\n",
     "          inplace=True)\n",
     "\n",
-    "# Drop irrelevant features\n",
-    "df.drop([\"rs\", \"nox\", \"no\", \"tmpi\", \"uvi\"], axis=\"columns\", inplace=True)"
+    "# irrelevant_features = [\"rs\", \"nox\", \"no\"] # Irrelevant features 2017\n",
+    "irrelevant_features = [\"rs\", \"nox\", \"no\", \"tmpi\", \"uvi\"] # Irrelevant features 2023\n",
+    "df.drop(irrelevant_features, axis=\"columns\", inplace=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
        "2  240.82     0  SE  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,11 +563,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_daily.to_csv(f\"datasets/preprocess/{filename}-processed.csv\")"
+    "# df_daily.to_csv(f\"datasets/preprocess/{filename}-processed.csv\")"
    ]
   }
  ],
