--- a/1_data_preprocess.ipynb
+++ b/1_data_preprocess.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Objective\n",
+    "\n",
     "The data used during this project has been obtained from a historical database of hourly sensor readings in Tlaquepaque, and although it's very useful information, it has some inconsistencies. The main problem this database has is incomplete data and a lack of standard practices in creating the datasets (various NULL representatives, missing features, etc.).\n",
     "\n",
     "Before performing any forecasting operations on the data, it will be preprocessed. Some of the changes made will be particular to the handling of time series data. \n",
@@ -61,7 +63,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Forecasting the PM2.5 readings for Tlaquepaque requires the following features:\n",
+    "Forecasting the readings for the pollutants in Tlaquepaque requires the following features:\n",
+    "\n",
+    "_Exogenous variables:_\n",
     "\n",
     "- Date (Fecha)\n",
     "- Hour (Hora)\n",
@@ -72,13 +76,21 @@
     "- Wind Speed (WS)\n",
     "- Wind Direction (WD)\n",
     "- Precipitation (PP)\n",
+    "\n",
+    "_Pollutants:_\n",
+    "\n",
     "- Fine Particulate Matter less than 2.5 micrometers (PM2.5)\n",
+    "- O3 (Ozone)\n",
+    "- NO (Nitrogen Oxide)\n",
+    "- NO2 (Nitrogen Dioxide)\n",
+    "- NOX (Nitrogen Oxides)\n",
+    "- CO (Carbon Monoxide)\n",
+    "- PM10 (Fine Particulate Matter less than 10 micrometers)\n",
     "\n",
-    "In case future forecasting is performed for other pollutants, the following features will be cleaned but not used in the later phases:\n",
+    "This project aims to forecast the PM2.5 readings for Tlaquepaque, but in case this projects is expanded to forecast all other pollutants, the dataset will be preprocessed and interpolated for all pollutants.\n",
     "\n",
-    "_O3 (Ozone), NO (Nitrogen Oxide), NO2 (Nitrogen Dioxide), NOX (Nitrogen Oxides), CO (Carbon Monoxide), PM10 (Fine Particulate Matter less than 10 micrometers)_\n",
     "\n",
-    "All other features can be ignored, such as: \n",
+    "All other features can be ignored. These are:\n",
     "\n",
     "_TMPI (Internal Temperature), Solar Radiation (RS), and UVI (UV Index)._"
    ]
