--- a/2_feature_engineering.ipynb
+++ b/2_feature_engineering.ipynb
@@ -11,6 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Objective\n",
+    "\n",
     "Once the data has been cleaned, it can be explored and analyzed. During this process, the characteristics of each feature will be explored and assesed if it can be used in a neural network model for it's forecasting. \n",
     "\n",
     "The tasks carried out will:\n",
