feat: save model

--- a/3_reframe_dataset.ipynb
+++ b/3_reframe_dataset.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,10 @@
     "from sklearn.metrics import mean_squared_error # Performance metrics\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "import optuna # Hyperparameter optimization"
+    "import optuna # Hyperparameter optimization\n",
+    "\n",
+    "# from joblib import Parallel, delayed \n",
+    "import joblib # Save model"
    ]
   },
   {
@@ -1890,6 +1893,444 @@
     "plt.title('PM2.5 1-Day Forecast\\n')\n",
     "# plt.savefig(f\"graphs/ltsm/predictions.png\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once the model has reached an acceptable performance, it can be saved to a file in order to be used in the future."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ltsm.pkl']"
+      ]
+     },
+     "execution_count": 217,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Save the model as a pickle in a file \n",
+    "joblib.dump(model, 'ltsm.pkl') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m12/12\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.31710607],\n",
+       "       [0.32685018],\n",
+       "       [0.34115672],\n",
+       "       [0.31513938],\n",
+       "       [0.33340764],\n",
+       "       [0.33715558],\n",
+       "       [0.32396936],\n",
+       "       [0.31361443],\n",
+       "       [0.3031697 ],\n",
+       "       [0.16884983],\n",
+       "       [0.15641725],\n",
+       "       [0.21816272],\n",
+       "       [0.38851422],\n",
+       "       [0.5631819 ],\n",
+       "       [0.48041838],\n",
+       "       [0.47708854],\n",
+       "       [0.41692057],\n",
+       "       [0.45332456],\n",
+       "       [0.5189043 ],\n",
+       "       [0.52186537],\n",
+       "       [0.45651373],\n",
+       "       [0.63482237],\n",
+       "       [0.5373596 ],\n",
+       "       [0.35037038],\n",
+       "       [0.4102282 ],\n",
+       "       [0.54445523],\n",
+       "       [0.4880414 ],\n",
+       "       [0.5884879 ],\n",
+       "       [0.5414838 ],\n",
+       "       [0.37361073],\n",
+       "       [0.36505112],\n",
+       "       [0.5685854 ],\n",
+       "       [0.2837208 ],\n",
+       "       [0.4236306 ],\n",
+       "       [0.5190382 ],\n",
+       "       [0.40114543],\n",
+       "       [0.29190663],\n",
+       "       [0.21021996],\n",
+       "       [0.2892285 ],\n",
+       "       [0.39105844],\n",
+       "       [0.39282697],\n",
+       "       [0.30186388],\n",
+       "       [0.5632468 ],\n",
+       "       [0.48962682],\n",
+       "       [0.57079345],\n",
+       "       [0.44277704],\n",
+       "       [0.42007956],\n",
+       "       [0.39286417],\n",
+       "       [0.38623527],\n",
+       "       [0.48360887],\n",
+       "       [0.56216943],\n",
+       "       [0.39987516],\n",
+       "       [0.35077497],\n",
+       "       [0.38401607],\n",
+       "       [0.36920407],\n",
+       "       [0.3241726 ],\n",
+       "       [0.49655092],\n",
+       "       [0.56628805],\n",
+       "       [0.34836987],\n",
+       "       [0.40923852],\n",
+       "       [0.32351664],\n",
+       "       [0.28694895],\n",
+       "       [0.5010794 ],\n",
+       "       [0.51632947],\n",
+       "       [0.3210435 ],\n",
+       "       [0.35628983],\n",
+       "       [0.36767888],\n",
+       "       [0.4514741 ],\n",
+       "       [0.38038877],\n",
+       "       [0.31779587],\n",
+       "       [0.3723187 ],\n",
+       "       [0.38697836],\n",
+       "       [0.39981   ],\n",
+       "       [0.4666351 ],\n",
+       "       [0.47209367],\n",
+       "       [0.492602  ],\n",
+       "       [0.46202508],\n",
+       "       [0.5604185 ],\n",
+       "       [0.45931196],\n",
+       "       [0.33523995],\n",
+       "       [0.40158993],\n",
+       "       [0.26863918],\n",
+       "       [0.5214619 ],\n",
+       "       [0.44394925],\n",
+       "       [0.38266787],\n",
+       "       [0.34142888],\n",
+       "       [0.2285968 ],\n",
+       "       [0.24352595],\n",
+       "       [0.25265107],\n",
+       "       [0.55428255],\n",
+       "       [0.3660496 ],\n",
+       "       [0.41219777],\n",
+       "       [0.46181482],\n",
+       "       [0.3961577 ],\n",
+       "       [0.5417532 ],\n",
+       "       [0.6669028 ],\n",
+       "       [0.60773736],\n",
+       "       [0.604278  ],\n",
+       "       [0.46634495],\n",
+       "       [0.5210132 ],\n",
+       "       [0.42091215],\n",
+       "       [0.52119845],\n",
+       "       [0.4201689 ],\n",
+       "       [0.43361193],\n",
+       "       [0.42607722],\n",
+       "       [0.39518338],\n",
+       "       [0.3188272 ],\n",
+       "       [0.27946162],\n",
+       "       [0.43208247],\n",
+       "       [0.394812  ],\n",
+       "       [0.3929066 ],\n",
+       "       [0.44790414],\n",
+       "       [0.44458064],\n",
+       "       [0.2993901 ],\n",
+       "       [0.3292008 ],\n",
+       "       [0.4376021 ],\n",
+       "       [0.291124  ],\n",
+       "       [0.3245895 ],\n",
+       "       [0.4721415 ],\n",
+       "       [0.4305681 ],\n",
+       "       [0.44280717],\n",
+       "       [0.32511225],\n",
+       "       [0.37022573],\n",
+       "       [0.46798941],\n",
+       "       [0.36368284],\n",
+       "       [0.47917515],\n",
+       "       [0.43289346],\n",
+       "       [0.42306554],\n",
+       "       [0.5524    ],\n",
+       "       [0.4533173 ],\n",
+       "       [0.5053853 ],\n",
+       "       [0.6120398 ],\n",
+       "       [0.6178076 ],\n",
+       "       [0.58440477],\n",
+       "       [0.50785136],\n",
+       "       [0.37157592],\n",
+       "       [0.43006217],\n",
+       "       [0.43849152],\n",
+       "       [0.44726536],\n",
+       "       [0.37062082],\n",
+       "       [0.45049575],\n",
+       "       [0.4807509 ],\n",
+       "       [0.4796884 ],\n",
+       "       [0.4201111 ],\n",
+       "       [0.46677023],\n",
+       "       [0.3415998 ],\n",
+       "       [0.36146742],\n",
+       "       [0.56524485],\n",
+       "       [0.302722  ],\n",
+       "       [0.23145989],\n",
+       "       [0.40475515],\n",
+       "       [0.3881636 ],\n",
+       "       [0.43231407],\n",
+       "       [0.39189962],\n",
+       "       [0.45865703],\n",
+       "       [0.3912254 ],\n",
+       "       [0.36551386],\n",
+       "       [0.3100115 ],\n",
+       "       [0.2927508 ],\n",
+       "       [0.4370301 ],\n",
+       "       [0.38011864],\n",
+       "       [0.40336144],\n",
+       "       [0.34122294],\n",
+       "       [0.32630286],\n",
+       "       [0.28108388],\n",
+       "       [0.42583093],\n",
+       "       [0.34573567],\n",
+       "       [0.36806193],\n",
+       "       [0.37434387],\n",
+       "       [0.4349042 ],\n",
+       "       [0.32986444],\n",
+       "       [0.35024497],\n",
+       "       [0.4480295 ],\n",
+       "       [0.46503073],\n",
+       "       [0.4305961 ],\n",
+       "       [0.42732748],\n",
+       "       [0.49409422],\n",
+       "       [0.4915517 ],\n",
+       "       [0.43465662],\n",
+       "       [0.49751472],\n",
+       "       [0.54288095],\n",
+       "       [0.53612083],\n",
+       "       [0.51417387],\n",
+       "       [0.50539404],\n",
+       "       [0.2851037 ],\n",
+       "       [0.3133773 ],\n",
+       "       [0.255292  ],\n",
+       "       [0.21804443],\n",
+       "       [0.32756186],\n",
+       "       [0.16917565],\n",
+       "       [0.08376075],\n",
+       "       [0.10649653],\n",
+       "       [0.2002931 ],\n",
+       "       [0.24730825],\n",
+       "       [0.22240573],\n",
+       "       [0.28571215],\n",
+       "       [0.26814386],\n",
+       "       [0.1923208 ],\n",
+       "       [0.1593467 ],\n",
+       "       [0.22195867],\n",
+       "       [0.19826177],\n",
+       "       [0.17160372],\n",
+       "       [0.2406705 ],\n",
+       "       [0.31733817],\n",
+       "       [0.2646464 ],\n",
+       "       [0.28236496],\n",
+       "       [0.38502622],\n",
+       "       [0.2658872 ],\n",
+       "       [0.25588498],\n",
+       "       [0.33441907],\n",
+       "       [0.19253415],\n",
+       "       [0.12211838],\n",
+       "       [0.15532759],\n",
+       "       [0.10448255],\n",
+       "       [0.17139211],\n",
+       "       [0.16356596],\n",
+       "       [0.20003444],\n",
+       "       [0.23551089],\n",
+       "       [0.21095759],\n",
+       "       [0.10240833],\n",
+       "       [0.09812316],\n",
+       "       [0.15808529],\n",
+       "       [0.19098848],\n",
+       "       [0.18720901],\n",
+       "       [0.16128662],\n",
+       "       [0.19096611],\n",
+       "       [0.17521825],\n",
+       "       [0.15495744],\n",
+       "       [0.19650121],\n",
+       "       [0.18100226],\n",
+       "       [0.20489217],\n",
+       "       [0.20735377],\n",
+       "       [0.20326245],\n",
+       "       [0.16457129],\n",
+       "       [0.18621619],\n",
+       "       [0.18404824],\n",
+       "       [0.1679657 ],\n",
+       "       [0.149778  ],\n",
+       "       [0.16191955],\n",
+       "       [0.14260021],\n",
+       "       [0.1466301 ],\n",
+       "       [0.20673808],\n",
+       "       [0.25796738],\n",
+       "       [0.19439799],\n",
+       "       [0.16990975],\n",
+       "       [0.1757609 ],\n",
+       "       [0.14788352],\n",
+       "       [0.20624253],\n",
+       "       [0.17061213],\n",
+       "       [0.20545864],\n",
+       "       [0.24842441],\n",
+       "       [0.16636729],\n",
+       "       [0.20026919],\n",
+       "       [0.20903859],\n",
+       "       [0.22607452],\n",
+       "       [0.20369023],\n",
+       "       [0.23098096],\n",
+       "       [0.20177644],\n",
+       "       [0.17981963],\n",
+       "       [0.20209438],\n",
+       "       [0.22308621],\n",
+       "       [0.17881644],\n",
+       "       [0.23121768],\n",
+       "       [0.22542015],\n",
+       "       [0.21372974],\n",
+       "       [0.20130199],\n",
+       "       [0.2896982 ],\n",
+       "       [0.19362941],\n",
+       "       [0.14445153],\n",
+       "       [0.20683435],\n",
+       "       [0.2348145 ],\n",
+       "       [0.19255748],\n",
+       "       [0.2344833 ],\n",
+       "       [0.2422477 ],\n",
+       "       [0.2171737 ],\n",
+       "       [0.20667934],\n",
+       "       [0.21097271],\n",
+       "       [0.2350564 ],\n",
+       "       [0.21784618],\n",
+       "       [0.2258274 ],\n",
+       "       [0.26130232],\n",
+       "       [0.23729551],\n",
+       "       [0.22159016],\n",
+       "       [0.23026538],\n",
+       "       [0.27769655],\n",
+       "       [0.22014391],\n",
+       "       [0.23903838],\n",
+       "       [0.20658773],\n",
+       "       [0.1396493 ],\n",
+       "       [0.08334383],\n",
+       "       [0.16285191],\n",
+       "       [0.09202074],\n",
+       "       [0.11430798],\n",
+       "       [0.14508373],\n",
+       "       [0.22459543],\n",
+       "       [0.23793918],\n",
+       "       [0.13293202],\n",
+       "       [0.10894476],\n",
+       "       [0.2138519 ],\n",
+       "       [0.32963982],\n",
+       "       [0.20087774],\n",
+       "       [0.18163219],\n",
+       "       [0.11849447],\n",
+       "       [0.16277307],\n",
+       "       [0.25507492],\n",
+       "       [0.25325328],\n",
+       "       [0.28786904],\n",
+       "       [0.31213868],\n",
+       "       [0.1832872 ],\n",
+       "       [0.1771928 ],\n",
+       "       [0.22443998],\n",
+       "       [0.28446788],\n",
+       "       [0.2690702 ],\n",
+       "       [0.19007169],\n",
+       "       [0.3136166 ],\n",
+       "       [0.3205988 ],\n",
+       "       [0.32498726],\n",
+       "       [0.30061218],\n",
+       "       [0.3721526 ],\n",
+       "       [0.5253415 ],\n",
+       "       [0.35793403],\n",
+       "       [0.23163301],\n",
+       "       [0.30825153],\n",
+       "       [0.20978247],\n",
+       "       [0.26598114],\n",
+       "       [0.2207917 ],\n",
+       "       [0.22346142],\n",
+       "       [0.2641511 ],\n",
+       "       [0.2520291 ],\n",
+       "       [0.35654774],\n",
+       "       [0.32588288],\n",
+       "       [0.2901741 ],\n",
+       "       [0.17898923],\n",
+       "       [0.25832963],\n",
+       "       [0.2242972 ],\n",
+       "       [0.28591248],\n",
+       "       [0.33286583],\n",
+       "       [0.47008157],\n",
+       "       [0.31627196],\n",
+       "       [0.37476927],\n",
+       "       [0.29685402],\n",
+       "       [0.26049313],\n",
+       "       [0.18735579],\n",
+       "       [0.23185182],\n",
+       "       [0.29445666],\n",
+       "       [0.18688396],\n",
+       "       [0.12562704],\n",
+       "       [0.12212405],\n",
+       "       [0.1428882 ],\n",
+       "       [0.11267978],\n",
+       "       [0.22121954],\n",
+       "       [0.27042705],\n",
+       "       [0.26838216],\n",
+       "       [0.15887621],\n",
+       "       [0.14409672],\n",
+       "       [0.25096908],\n",
+       "       [0.2525678 ],\n",
+       "       [0.21966362],\n",
+       "       [0.18176302],\n",
+       "       [0.21862578],\n",
+       "       [0.31059745],\n",
+       "       [0.31599766],\n",
+       "       [0.33891812],\n",
+       "       [0.3689097 ],\n",
+       "       [0.37847766],\n",
+       "       [0.3351991 ],\n",
+       "       [0.12820005],\n",
+       "       [0.38761136],\n",
+       "       [0.15348667],\n",
+       "       [0.16938797],\n",
+       "       [0.21278682],\n",
+       "       [0.25760418],\n",
+       "       [0.22691461]], dtype=float32)"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the model from the file \n",
+    "knn_from_joblib = joblib.load('ltsm.pkl') \n",
+    "  \n",
+    "# Use the loaded model to make predictions \n",
+    "knn_from_joblib.predict(test_X) "
    ]
   }
  ],
