fix: cell output

--- a/3_pm25_forecasting.ipynb
+++ b/3_pm25_forecasting.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,23 +1137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def save_model(filename:str)->None:\n",
+    "def save_model(model, filename:str)->None:\n",
     "    # Save the model as a pickle in a file \n",
     "    joblib.dump(model, filename) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"lstm_one_step.pkl\"\n",
-    "save_model(filename)"
+    "filename = \"models/lstm_one_step.pkl\"\n",
+    "save_model(model, filename)"
    ]
   },
   {
@@ -1541,24 +1541,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'save_model' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[32], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlstm_seven_step.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43msave_model\u001b[49m(filename)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'save_model' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "filename = \"lstm_seven_step.pkl\"\n",
-    "save_model(filename)"
+    "filename = \"models/lstm_seven_step_9rmse.pkl\"\n",
+    "save_model(model, filename)"
    ]
   },
   {
